--- a/src/app/pages/voir/voir.component.scss
+++ b/src/app/pages/voir/voir.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   height: 30rem;
-  overflow-x: hidden;
   margin: auto;
   padding: 2rem 0;
   animation: fadeIn 1s;
@@ -11,6 +10,7 @@
     display: flex;
     flex-direction: column;
     padding-left: 2rem;
+    width: calc(50% - 2rem);
     @media (max-width: 768px) {
       padding: 0;
       width: 100% !important;
