--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -17,6 +17,11 @@
     display: flex;
     flex-direction: column;
   }
+  a{
+    @media(max-width: 1250px) {
+      font-size: 1.5rem;
+    }
+  }
 }
 h1{
   font-family: 'mainfont', sans-serif;
